--- a/cloudFrontEnd/src/app/get-local-wifi-details/get-local-wifi-details.component.html
+++ b/cloudFrontEnd/src/app/get-local-wifi-details/get-local-wifi-details.component.html
@@ -1,7 +1,9 @@
 
 <div class="wifi-details">
   <mat-card>
-    <mat-card-title>Local Wifi Information<mat-spinner *ngIf="loading" class="spinner" [diameter]="25"></mat-spinner></mat-card-title>
+    <mat-card-title>Local Wifi Information@if (loading) {
+      <mat-spinner class="spinner" [diameter]="25"></mat-spinner>
+    }</mat-card-title>
 
     <mat-card-content #scrollable_content class="scrollable-content" [style]="utils.getScrollableContentStyle(scrollableContent?.nativeElement, true)">
       <app-reporting [embedded]="true"></app-reporting>
@@ -10,7 +12,9 @@
         <ng-container matColumnDef="InUse">
           <th mat-header-cell *matHeaderCellDef>In Use</th>
           <td mat-cell *matCellDef="let element">
-            <mat-icon class="in-use-check-mark" *ngIf="element.in_use">check_circle</mat-icon>
+            @if (element.in_use) {
+              <mat-icon class="in-use-check-mark">check_circle</mat-icon>
+            }
           </td>
         </ng-container>
 
@@ -56,9 +60,9 @@
           <td mat-cell *matCellDef="let element"> {{element.security}} </td>       </ng-container>
 
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </mat-card-content>
-  </mat-card>
-</div>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </mat-card-content>
+    </mat-card>
+  </div>
