--- a/cloudFrontEnd/src/app/user-login/user-login.component.html
+++ b/cloudFrontEnd/src/app/user-login/user-login.component.html
@@ -6,59 +6,67 @@
         <div class="alert-danger mat-elevation-z4" [style]="'display: '+(errorMessage != '' ? 'inline-block' : 'none')">{{errorMessage}}</div>
       </div>
       <div>
-          <mat-form-field appearance="outline" [style.width.px]="225">
+        <mat-form-field appearance="outline" [style.width.px]="225">
           <input #username matInput type="text" autocomplete="off" maxlength="20"
-                 [formControl]="getFormControl('username')"
-                 (beforeinput)="confirmOnReturn($event)"
-                 matTooltip="Enter your Cloud Service user name."
-                 matTooltipClass="tooltip"
-                 placeholder="User name">
+            [formControl]="getFormControl('username')"
+            (beforeinput)="confirmOnReturn($event)"
+            matTooltip="Enter your Cloud Service user name."
+            matTooltipClass="tooltip"
+            placeholder="User name">
           <mat-hint>User name for your Cloud account</mat-hint>
-          <mat-error *ngIf="loginForm.controls['username'].hasError('pattern')">5 or more characters and numbers
-          </mat-error>
-          <mat-error *ngIf="loginForm.controls['username'].hasError('required')">User name is required</mat-error>
+          @if (loginForm.controls['username'].hasError('pattern')) {
+            <mat-error>5 or more characters and numbers
+            </mat-error>
+          }
+          @if (loginForm.controls['username'].hasError('required')) {
+            <mat-error>User name is required</mat-error>
+          }
         </mat-form-field>
       </div>
 
-        <mat-form-field appearance="outline" [style.width.px]="225">
-          <input matInput type="password" autocomplete="off" maxlength="25"
-                 [formControl]="getFormControl('password')"
-                 (beforeinput)="confirmOnReturn($event)"
-                 matTooltip="Enter your Cloud Service password"
-                 matTooltipClass="tooltip"
-                 placeholder="Password">
-          <mat-hint>Password for the Cloud account</mat-hint>
-          <mat-error *ngIf="loginForm.controls['password'].hasError('pattern')">Upper, lower case, numbers and special
+      <mat-form-field appearance="outline" [style.width.px]="225">
+        <input matInput type="password" autocomplete="off" maxlength="25"
+          [formControl]="getFormControl('password')"
+          (beforeinput)="confirmOnReturn($event)"
+          matTooltip="Enter your Cloud Service password"
+          matTooltipClass="tooltip"
+          placeholder="Password">
+        <mat-hint>Password for the Cloud account</mat-hint>
+        @if (loginForm.controls['password'].hasError('pattern')) {
+          <mat-error>Upper, lower case, numbers and special
             chars
           </mat-error>
-          <mat-error *ngIf="loginForm.controls['password'].hasError('required')">Password is required</mat-error>
-        </mat-form-field>
-        <div class="remember-me-checkbox">
-          <mat-checkbox
-                        [color]="'primary'"
-                        matTooltip="Remember me enables automatic login on future sessions"
-                        matTooltipClass="tooltip"
-                        (change)="rememberMe=$event.checked">Remember Me
-          </mat-checkbox>
-        </div>
-        <a class="forgot-password" href="/#/forgotpassword">Forgotten password ?</a>
+        }
+        @if (loginForm.controls['password'].hasError('required')) {
+          <mat-error>Password is required</mat-error>
+        }
+      </mat-form-field>
+      <div class="remember-me-checkbox">
+        <mat-checkbox
+          [color]="'primary'"
+          matTooltip="Remember me enables automatic login on future sessions"
+          matTooltipClass="tooltip"
+          (change)="rememberMe=$event.checked">Remember Me
+        </mat-checkbox>
+      </div>
+      <a class="forgot-password" href="/#/forgotpassword">Forgotten password ?</a>
       <br>
-      <span>
-      <button color="cancel" mat-raised-button (click)="hideLoginForm()"
-              matTooltip="Close this dialogue and leave the existing user name and password in place"
-              matTooltipClass="tooltip">
-        Cancel
-      </button>
-              <span>&nbsp;&nbsp;</span>
-      <button color="warn" mat-raised-button
-              [disabled]="anyInvalid()"
-              (click)="login()"
-              matTooltip="Login into the CCTV Cloud Service with the given username and password"
-              matTooltipClass="tooltip">
-        Confirm
-      </button>
-    </span>
-    </mat-card-content>
-  </mat-card>
-</div>
+        <span>
+          <button color="cancel" mat-raised-button (click)="hideLoginForm()"
+            matTooltip="Close this dialogue and leave the existing user name and password in place"
+            matTooltipClass="tooltip">
+            Cancel
+          </button>
+          <span>&nbsp;&nbsp;</span>
+          <button color="warn" mat-raised-button
+            [disabled]="anyInvalid()"
+            (click)="login()"
+            matTooltip="Login into the CCTV Cloud Service with the given username and password"
+            matTooltipClass="tooltip">
+            Confirm
+          </button>
+        </span>
+      </mat-card-content>
+    </mat-card>
+  </div>
 
