--- a/cloudFrontEnd/src/app/video/audio-control/audio-control.component.html
+++ b/cloudFrontEnd/src/app/video/audio-control/audio-control.component.html
@@ -1,10 +1,29 @@
-<div class="audio-control">
-    <mat-card>
-        <div>
-            <mat-icon (click)="toggleMuteAudio()">{{ mute ? 'volume_off' : 'volume_up' }}</mat-icon>
-            <mat-slider min="0" max="1" step="0.02" ngDefaultControl showTickMarks discrete [displayWith]="zeroTo100" [disabled]="mute" (change)="setVolume($event)">
-                <input matSliderThumb [value]="level">
-            </mat-slider>
-        </div>
-    </mat-card>
+<div class="audio-control" [ngStyle]="audioLatencyLimiting === undefined ? {'margin-top': '30px'} : {}">
+  <mat-card>
+    @if(audioLatencyLimiting !== undefined) {
+      <div>
+        <mat-checkbox
+          matTooltip="{{!audioLatencyLimiting ? 'Check' : 'Uncheck'}} to {{!audioLatencyLimiting ? 'enable' : 'disable'}} audio latency limiting"
+          [matTooltipShowDelay]="UtilsService.toolTipDelay"
+          matTooltipClass="tooltip"
+          (change)="setLatencyLimiting($event)" [ngModel]="audioLatencyLimiting" labelPosition="after">Audio latency limiting</mat-checkbox>
+      </div>
+    }
+    <div>
+      <button mat-icon-button (click)="toggleMuteAudio()"
+               matTooltip="Click to {{mute ? 'unmute' : 'mute'}} audio"
+               [matTooltipShowDelay]="UtilsService.toolTipDelay"
+               matTooltipClass="tooltip">
+        <mat-icon>{{ mute ? 'volume_off' : 'volume_up' }}</mat-icon>
+      </button>
+      <span></span>
+      <mat-slider min="0" max="1" step="0.02" ngDefaultControl showTickMarks discrete [displayWith]="zeroTo100"
+                  matTooltip="{{!mute ? 'Set audio volume' : ''}}"
+                  [matTooltipShowDelay]="UtilsService.toolTipDelay"
+                  matTooltipClass="tooltip"
+                  [disabled]="mute" (change)="setVolume()" (click)="setVolume()">
+        <input matSliderThumb [(ngModel)]="level">
+      </mat-slider>
+    </div>
+  </mat-card>
 </div>
