--- a/cloudFrontEnd/src/app/video/audio-control/audio-control.component.scss
+++ b/cloudFrontEnd/src/app/video/audio-control/audio-control.component.scss
@@ -1,27 +1,26 @@
 div.audio-control {
-  width: 275px;
-  margin-top: 30px;
+  width: 280px;
+  // These margins allow the thumb label to be displayed over the top and right edges of the audio control
+  margin-top: 3px;
+  margin-right: 30px;
   > mat-card {
-
     > div {
       height: 0;
-
-      > mat-icon {
-        cursor: pointer;
-        margin-right: 0.4rem;
-        margin-left: 0;
-        color: white;
+      > button {
+        > mat-icon {
+          cursor: pointer;
+          margin-left: 0;
+          color: white;
+        }
       }
-
+      > span {
+        padding: 5px;
+      }
       > mat-slider {
         width: 200px;
-        position: relative;
         top: -10px;
       }
-
       margin-bottom: 30px;
     }
   }
-
-  overflow: visible;
 }
