--- a/cloudFrontEnd/src/app/video/video.component.html
+++ b/cloudFrontEnd/src/app/video/video.component.html
@@ -4,8 +4,10 @@
         <mat-card class="mx-auto hide-background mat-elevation-z0">
             <mat-card-title class="mat-elevation-z8">
                 {{ mediaFeeder.camName + " (" + mediaFeeder.streamDescr + ") " }}<span
-                    class="vid-time">{{ currentTime }}</span><span *ngIf="!isLive"
+      class="vid-time">{{ currentTime }}</span>@if (!isLive) {
+      <span
                                                                    class="duration-time"> - {{ totalTime }}</span>
+    }
             </mat-card-title>
         </mat-card>
     </div>
@@ -20,49 +22,64 @@
              (touchend)="vt.touchEndHandler($event)">
             <video #video preload="metadata"></video>
         </div>
-        <div #videoControls *ngIf="isLive" class="video-controls">
+  @if (isLive) {
+    <div #videoControls class="video-controls">
             <div>
                 <div class="audio-controls-dialogue">
                     <div [@detailExpand]="showAudioControls ? 'expanded' : 'collapsed'">
-                        <app-audio-control *ngIf="stream?.audio && !mediaFeeder.noAudio" [mute]="mediaFeeder.isMuted"
+            @if (stream && stream.audio && !mediaFeeder.noAudio) {
+              <app-audio-control [mute]="mediaFeeder.isMuted"
                                            (muteAudio)="toggleMuteAudio()" [level]="mediaFeeder.gain"
-                                           (setLevel)="setVolume($event.valueOf())">
+                (setLevel)="setVolume($event.valueOf())"
+                (setAudioLatencyLimiting)="audioLatencyLimiting($event.valueOf())"
+                [audioLatencyLimiting]="mediaFeeder.getAudioLatencyControl()">
                         </app-audio-control>
+            }
                         <div>
                         </div>
                     </div>
                 </div>
-                <label *ngIf="stream?.audio && !mediaFeeder.noAudio" class="video-buttons"
+        @if (stream && stream.audio && !mediaFeeder.noAudio) {
+          <label class="video-buttons"
+            [ngClass]="{'audio-latency-correction': mediaFeeder.audioLatencyOverrun}"
                        [matTooltip]="'Click to '+(!showAudioControls ? 'show' : 'hide')+' audio controls, or Ctrl click to ' + (mediaFeeder.isMuted ? 'unmute' : 'mute') + ' sound'"
+            [matTooltipShowDelay]="UtilsService.toolTipDelay"
                        matTooltipClass="video-buttons-tooltip">
                     <mat-icon (click)="toggleShowAudioControls()">{{ mediaFeeder.isMuted ? 'volume_off' : 'volume_up' }}
                     </mat-icon>
                 </label>
-                <label *ngIf="mediaFeeder.backchannelAudioSupported"
+        }
+        @if (mediaFeeder.backchannelAudioSupported) {
+          <label
                        class="video-buttons"
                        [matTooltip]="audioBackchannel.audioButtonTooltip()"
+            [matTooltipShowDelay]="UtilsService.toolTipDelay"
                        matTooltipClass="video-buttons-tooltip">
                     <mat-icon
                             [ngClass]="{'audio-out-inactive': !utilsService.speakActive && !audioBackchannel.audioToggle && !utilsService.isGuestAccount, 'audio-out-active':  utilsService.speakActive && audioBackchannel.audioToggle && !utilsService.isGuestAccount, 'audio-out-disabled': (utilsService.speakActive && !audioBackchannel.audioToggle) || utilsService.isGuestAccount}"
                             (click)="audioBackchannel.toggleAudioOut(mediaFeeder.camera, stream)">{{ audioBackchannel.audioToggle ? 'mic' : 'mic_off' }}
                     </mat-icon>
                 </label>
-                <select *ngIf="mediaFeeder.backchannelAudioSupported" [disabled]="utilsService.speakActive"
-                        [matTooltip]="audioBackchannel.audioInputSelectorTooltip()" matTooltipClass="video-buttons-tooltip"
+          <select [disabled]="utilsService.speakActive"
+            [matTooltip]="audioBackchannel.audioInputSelectorTooltip()" [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="video-buttons-tooltip"
                         [(ngModel)]="audioBackchannel.selectedDeviceId" (change)="audioBackchannel.setAudioInput()">
-                    <option *ngFor="let device of audioBackchannel.mediaDevices | audioInput"
-                            [value]="device.deviceId">{{ device.label }}
+            @for (device of audioBackchannel.mediaDevices | audioInput; track device) {
+              <option [value]="device.deviceId">{{ device.label }}
                     </option>
+            }
                 </select>
+        }
                 <label [ngClass]="{'media-feed-stalled': mediaFeeder.isStalled}">
                     <mat-icon>timer</mat-icon>
                 </label>
                 <label class="video-buttons"
                        matTooltip="Set full screen"
+          [matTooltipShowDelay]="UtilsService.toolTipDelay"
                        matTooltipClass="video-buttons-tooltip">
                     <mat-icon (click)="setFullScreen()">fullscreen</mat-icon>
                 </label>
             </div>
         </div>
+  }
     </div>
 </div>
