--- a/cloudFrontEnd/src/app/recording-control/recording-control.component.html
+++ b/cloudFrontEnd/src/app/recording-control/recording-control.component.html
@@ -15,14 +15,14 @@
         <div>
           <mat-form-field appearance="outline"
                           matTooltip="Select a recording by date and time"
-            [matTooltipShowDelay]="UtilsService.toolTipDelay"
+                          [matTooltipShowDelay]="UtilsService.toolTipDelay"
                           matTooltipClass="tooltip">
-          <mat-label>Motion Events</mat-label>
+            <mat-label>Motion Events</mat-label>
             <mat-select #selector (selectionChange)="showMotionEvent($event)">
               @for (event of motionEvents; track event) {
                 <mat-option [value]="event">
-                {{ event.dateTime }}
-              </mat-option>
+                  {{ event.dateTime }}
+                </mat-option>
               }
             </mat-select>
           </mat-form-field>
@@ -32,51 +32,52 @@
             @switch (confirmDelete) {
               @case (false) {
                 <div class="delete-button"
-               matTooltip="{{isGuest ? 'Disabled for guest' : 'Delete the currently selected recording'}}"
-                  [matTooltipShowDelay]="UtilsService.toolTipDelay"
-               matTooltipClass="tooltip">
-            <button (click)="confirmDelete=true" [disabled]="isGuest" color="warn" mat-raised-button
-                    matTooltip="Delete the currently displayed recording" [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="tooltip">
-              Delete This Recording
-            </button>
-          </div>
+                     matTooltip="{{isGuest ? 'Disabled for guest' : 'Delete the currently selected recording'}}"
+                     [matTooltipShowDelay]="UtilsService.toolTipDelay"
+                     matTooltipClass="tooltip">
+                  <button (click)="confirmDelete=true" [disabled]="isGuest" color="warn" mat-raised-button
+                          matTooltip="Delete the currently displayed recording"
+                          [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="tooltip">
+                    Delete This Recording
+                  </button>
+                </div>
               }
               @case (true) {
                 <div>
-            Delete {{ selector.value.dateTime }},
-            <div>are you sure?</div>
-            <button (click)="confirmDelete=false;deleteRecording()" color="warn" mat-raised-button
-                    matTooltip="Delete the currently selected recording"
-                    [matTooltipShowDelay]="UtilsService.toolTipDelay"
-                    matTooltipClass="tooltip">Confirm
-            </button>
-            <button (click)="confirmDelete=false" color="cancel" mat-raised-button
-                    matTooltip="Do not delete the recording"
-                    [matTooltipShowDelay]="UtilsService.toolTipDelay"
-                    matTooltipClass="tooltip">
-              Cancel
-            </button>
-          </div>
+                  Delete {{ selector.value.dateTime }},
+                  <div>are you sure?</div>
+                  <button (click)="confirmDelete=false;deleteRecording()" color="warn" mat-raised-button
+                          matTooltip="Delete the currently selected recording"
+                          [matTooltipShowDelay]="UtilsService.toolTipDelay"
+                          matTooltipClass="tooltip">Confirm
+                  </button>
+                  <button (click)="confirmDelete=false" color="cancel" mat-raised-button
+                          matTooltip="Do not delete the recording"
+                          [matTooltipShowDelay]="UtilsService.toolTipDelay"
+                          matTooltipClass="tooltip">
+                    Cancel
+                  </button>
+                </div>
               }
             }
-        </div>
+          </div>
         }
         @if (!confirmDelete && !downloading) {
           <div class="download-button">
-          <button (click)="downloadRecording()" color="download" mat-raised-button
-                  matTooltip="Download this recording to your PC or phone"
-              [matTooltipShowDelay]="UtilsService.toolTipDelay"
-                  matTooltipClass="tooltip">
-            Download&nbsp;Recording
-          </button>
-        </div>
+            <button (click)="downloadRecording()" color="download" mat-raised-button
+                    matTooltip="Download this recording to your PC or phone"
+                    [matTooltipShowDelay]="UtilsService.toolTipDelay"
+                    matTooltipClass="tooltip">
+              Download&nbsp;Recording
+            </button>
+          </div>
         }
       </mat-card-content>
       @if (downloading) {
         <mat-card-content class="wait-box">
-        <mat-spinner [diameter]="25"></mat-spinner>
-        <span>Please wait..</span>
-      </mat-card-content>
+          <mat-spinner [diameter]="25"></mat-spinner>
+          <span>Please wait..</span>
+        </mat-card-content>
       }
     </mat-card>
     <div>
@@ -85,26 +86,28 @@
         <div class="additional-buttons">
           @if (hasAudio()) {
             <div class="audio-controls-dialogue">
-                <div [@detailExpand]="showAudioControls ? 'expanded' : 'collapsed'">
-                    <app-audio-control [mute]="isMuted()"
-                  (muteAudio)="mute($event)" [level]="volume"
-                  (setLevel)="setVolume($event.valueOf())">
-                </app-audio-control>
-                    <div>
-                    </div>
+              @if (showAudioControls) {
+                <div style="transition: height 10s" [animate.enter]="enterClass()" [animate.leave]="farewell()">
+                  <app-audio-control [mute]="isMuted()"
+                                     (muteAudio)="mute($event)" [level]="volume"
+                                     (setLevel)="setVolume($event.valueOf())">
+                  </app-audio-control>
+                  <div>
+                  </div>
                 </div>
+              }
             </div>
             <label class="video-buttons"
                    [matTooltip]="'Click to '+(!showAudioControls ? 'show' : 'hide')+' audio controls, or Ctrl click to ' + (isMuted() ? 'unmute' : 'mute') + ' sound'"
-              [matTooltipShowDelay]="UtilsService.toolTipDelay"
+                   [matTooltipShowDelay]="UtilsService.toolTipDelay"
                    matTooltipClass="video-buttons-tooltip">
-                <mat-icon (click)="toggleShowAudioControls()">{{ isMuted() ? 'volume_off' : 'volume_up' }}
-                </mat-icon>
+              <mat-icon (click)="toggleShowAudioControls()">{{ isMuted() ? 'volume_off' : 'volume_up' }}
+              </mat-icon>
             </label>
           }
           <label class="video-buttons"
                  matTooltip="Set full screen"
-            [matTooltipShowDelay]="UtilsService.toolTipDelay"
+                 [matTooltipShowDelay]="UtilsService.toolTipDelay"
                  matTooltipClass="video-buttons-tooltip">
             <mat-icon (click)="video.setFullScreen()">fullscreen</mat-icon>
           </label>
@@ -113,18 +116,21 @@
           <mat-button-toggle-group aria-label="Playback control" name="playbackControl"
                                    [(ngModel)]="selectedPlaybackMode">
             <button mat-button (click)="returnToStart()"
-              matTooltip="Go back to the start of the recording" [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="tooltip">
+                    matTooltip="Go back to the start of the recording" [matTooltipShowDelay]="UtilsService.toolTipDelay"
+                    matTooltipClass="tooltip">
               <mat-icon>fast_rewind</mat-icon>
             </button>
-            <button mat-button (click)="stepBack()" matTooltip="Step backward 10 seconds" [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="tooltip">
+            <button mat-button (click)="stepBack()" matTooltip="Step backward 10 seconds"
+                    [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="tooltip">
               <mat-icon>replay_10</mat-icon>
             </button>
-            <button mat-button (click)="stepForward()" matTooltip="Step forward 10 seconds" [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="tooltip">
+            <button mat-button (click)="stepForward()" matTooltip="Step forward 10 seconds"
+                    [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="tooltip">
               <mat-icon>forward_10</mat-icon>
             </button>
 
             <mat-button-toggle (click)="paused ? start() : pause()" [matTooltip]="paused ? 'Play' : 'Pause'"
-              [matTooltipShowDelay]="UtilsService.toolTipDelay"
+                               [matTooltipShowDelay]="UtilsService.toolTipDelay"
                                matTooltipClass="tooltip"
                                value="startPause">
               @if (!paused) {
@@ -133,11 +139,13 @@
                 <mat-icon>play_arrow</mat-icon>
               }
             </mat-button-toggle>
-            <mat-button-toggle (click)="fastForward()" matTooltip="Fast forward" [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="tooltip"
+            <mat-button-toggle (click)="fastForward()" matTooltip="Fast forward"
+                               [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="tooltip"
                                value="fastForward">
               <mat-icon>fast_forward</mat-icon>
             </mat-button-toggle>
-            <mat-button-toggle (click)="fasterForward()" matTooltip="Faster forward" [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="tooltip"
+            <mat-button-toggle (click)="fasterForward()" matTooltip="Faster forward"
+                               [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="tooltip"
                                value="fasterForward">
               <mat-icon class="faster-forward">fast_forward</mat-icon>
             </mat-button-toggle>
