--- a/cloudFrontEnd/src/app/recording-control/recording-control.component.scss
+++ b/cloudFrontEnd/src/app/recording-control/recording-control.component.scss
@@ -123,3 +123,33 @@ mat-icon {
   margin-bottom: -10px;
 }
 
+.enter-animation {
+  animation: fade-in 0.5s;
+}
+
+$cursor-origin: 15px;
+@keyframes fade-in {
+  from {
+    transform: scalex(0);
+    transform-origin: $cursor-origin;
+  }
+  to {
+    transform: scalex(1);
+    transform-origin: $cursor-origin;
+  }
+}
+
+.leaving {
+  animation: fade-out 0.5s;
+}
+
+@keyframes fade-out {
+  from {
+    transform: scalex(1);
+    transform-origin: $cursor-origin;
+   }
+  to {
+    transform: scalex(0);
+    transform-origin: $cursor-origin;
+  }
+}
