--- a/cloudFrontEnd/src/app/recording-control/recording-control.component.scss
+++ b/cloudFrontEnd/src/app/recording-control/recording-control.component.scss
@@ -124,32 +124,24 @@ mat-icon {
 }
 
 .enter-animation {
+  opacity: 0;
   animation: fade-in 0.5s;
 }
 
 $cursor-origin: 17px;
 @keyframes fade-in {
-  from {
-    transform: scalex(0);
-    transform-origin: $cursor-origin;
-  }
   to {
-    transform: scalex(1);
-    transform-origin: $cursor-origin;
+    opacity: 1;
   }
 }
 
 .leaving {
+  opacity: 1;
   animation: fade-out 0.5s;
 }
 
 @keyframes fade-out {
-  from {
-    transform: scalex(1);
-    transform-origin: $cursor-origin;
-   }
   to {
-    transform: scalex(0);
-    transform-origin: $cursor-origin;
+    opacity: 0;
   }
 }
